# Tech-Journey

./: .gitignore  05-predict-test.ipynb  README.md  pyproject.toml  test.js
learn/learn_DataApp/: PythonPostgreSQL.ipynb  create_tables.py  docker-compose.yaml  etl.py  questions.txt  sql_queries.py  test.ipynb  test.py
learn/learn_Design_Patterns/factory_method/: coffee.py  design_patterns.py  main.py  stores.py
learn/learn_ML_deployment/: 05-predict-test.ipynb  05-train-churn-model.ipynb  Dockerfile  Pipfile  predict.py  schema.yaml  train.py
learn/learn_ML_deployment/server/: ping.py
learn/learn_ML_deployment/templates/: index.html
learn/learn_Test-Driven_Development/: calculator.py  test_pytest_calculator.py  test_unittest_calculator.py
learn/learn_api/: app.py  deps.py  models.py
learn/learn_api/routers/: depends_router.py  item_router.py  simple_router.py
learn/learn_improve_python/: improve_python.ipynb
learn/learn_modules/: script.py  setup.py  test.py
learn/learn_modules/tests/: test_document.py
learn/learn_modules/text_analyzer/: __init__.py  counter_utils.py  my_class.py  tweet.py
learn/learn_refactor/case1_vehicle_registration/: REFRACTOR_NOTES.md  after.py  before.py
learn/learn_websockets/: README.md  client.html  pyproject.toml
learn/learn_websockets/src/learn_websockets/: server.py
learn/sql_fundation/: create.ipynb  database.db
learn/stats/think_stats/: 1_chapter.ipynb  2_chapter.ipynb
