[project]
name = "learn-websockets"
version = "0.1.0"
description = ""
authors = [
    {name = "jose",email = "83618323+zediogocastro@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "websockets (>=15.0.1,<16.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start-server = "learn_websockets.server:main"